Fix NPE in getTargets and improve error handling
- Fix: List.of(null) throws NPE — use Collections.singletonList(null)
  which allows null elements, fixing the dedupe target mismatch
- Fix: GlobalExceptionHandler NPE when exception message is null
  (e.g. NullPointerException without detail) — default to "未知错误"
- Refactor: SecurityConfig — remove ObjectMapper dependency, use
  plain write() for JSON error response with Exception catch
- Add: favicon.ico to SecurityConfig permitAll list
- Fix: only send Content-Type: application/json when request has
  body (GET requests no longer carry unnecessary header)
- Add: debug logging to JwtAuthFilter for auth troubleshooting

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>